<resources>
    <string name="app_name">RestaurantReview</string>
    <string name="recent_view">Recently Viewed</string>
    <string name="top_rated">Top Rated</string>
    <string name="nav_draw_open">Open navigation drawer</string>
    <string name="nav_draw_close">Close navigation drawer</string>
    <string name="title_activity_login_page">LoginPage</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_sign_up">SignUp</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="logout">"Logged Out"</string>
    <string name="search">Search</string>


    <string name="review">Review</string>
    <string name="myreview">MyReviews</string>
    <string name="favourite">Favourites</string>
    <string name="map">Restaurant Map</string>
    <string name="profile">Profile</string>
    <string name="login">Login</string>
    <string name="log_out">Logout</string>
    <string name="settings">Settings</string>

    <string name="success">Success</string>
    <string name="signup"> Sign up to continue</string>
    <string name="signup_success">Sign Up Successful</string>
    <string name="signup_fail"> Sign up failed.</string>

    <string name="login_success">Login Successful</string>



    <string name="sign_up">Sign Up</string>
    <string name="signup_query">Already Made an account?</string>

    <string name="review1">How would you rate the restaurant?</string>
    <string name="review2">Write your review</string>
    <string name="review3">Title this review</string>
    <string name="review4">Share some photos</string>
    <string name="review5">submit</string>








</resources>