<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
<!-- Maybe make into group and only display when logged in -->
    <group
        android:checkableBehavior="single">
        <item
            android:id="@+id/review"
            android:icon="@drawable/ic_outline_rate_review_24"
            android:title="@string/review"
            android:visible="false"
             />
        <item
            android:id="@+id/myReview"
            android:icon="@drawable/ic_outline_star_rate_24"
            android:title="@string/myreview"
            android:visible="false"
           />
        <item
            android:id="@+id/favourites"
            android:icon="@drawable/ic_outline_favorite_border_24"
            android:title="Favourites"
            android:visible="false"
            />
        <item
            android:id="@+id/maps"
            android:icon="@drawable/ic_outline_map_24"
            android:title="@string/map"
            android:visible="false"
            />
    </group>

    <item android:title="@string/profile">
        <menu>
            <group
            android:checkableBehavior="single">
                <item
                    android:id="@+id/login"
                    android:icon="@drawable/ic_round_logout_24"
                    android:title="@string/login"
                    android:visible="true"
                    />
                <item
                    android:id="@+id/logout"
                    android:icon="@drawable/ic_round_logout_24"
                    android:title="@string/log_out"
                    android:visible="false"
                    />
                <item
                    android:id="@+id/settings"
                    android:icon="@drawable/ic_outline_settings_24"
                    android:title="@string/settings" />
            </group>
        </menu>
    </item>


</menu>